<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/top_bar_background"
        android:backgroundTint="@color/primary_color">

        <ImageView
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-25dp"
            android:src="@drawable/logo_secretaria" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_settings"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="-70dp"
        android:layout_below="@id/rl_top_bar"
        android:layout_centerHorizontal="true"
        android:background="@drawable/center_box_bg"
        android:elevation="8dp">

        <TextView
            android:id="@+id/tv_signin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/texto_sign_in"
            android:textColor="@color/primary_text_color"
            android:textSize="40sp" />

        <View
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:layout_alignBottom="@id/tv_signin_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-4dp"
            android:background="@color/secondary_color" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="40dp"
            android:layout_below="@id/tv_signin_text"
            android:layout_centerHorizontal="true"
            android:ems="12"
            android:inputType="textEmailAddress"
            style="@style/inputSignin"
            android:hint="@string/texto_correo"/>

        <EditText
            android:id="@+id/edit_text_pass"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="25dp"
            android:layout_below="@id/edit_text_email"
            android:layout_centerHorizontal="true"
            android:ems="12"
            style="@style/inputSignin"
            android:inputType="textPassword"
            android:hint="@string/texto_contrasenia"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_signin"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_pass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_gradient_bg"
            android:text="@string/texto_sign_in"
            android:textColor="@color/header_text_color"
            android:textSize="18sp"
            android:contentDescription="@string/desc_boton_iniciar_sesion"/>

        <TextView
            android:id="@+id/text_olvidaste_contra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_signin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/texto_olvidaste_contrasenia"
            android:textColor="@color/primary_text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text_olvidaste_contra"
            android:layout_marginTop="15dp"
            android:textColor="@color/primary_text_color"
            android:text="@string/no_tiene_cuenta"
            android:id="@+id/text_toSignUp"/>

    </RelativeLayout>

</RelativeLayout>