<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:strokeColor="@color/card_box_border"
        app:strokeWidth="2dp"
        app:cardBackgroundColor="@color/white"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/ll_info_museo"
                android:padding="30dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/img_museum"
                    android:contentDescription="@string/texto_fotografia_museo"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Museo de Arte de Querétaro"
                        android:textColor="@color/primary_text_color"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:id="@+id/tv_museum"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="12 de Marzo"
                        android:textSize="22dp"
                        android:textColor="@color/primary_text_color"
                        android:layout_marginTop="8dp"
                        android:id="@+id/tv_horario"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:layout_below="@id/ll_info_museo"
                android:id="@+id/ll_info_extra"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/testo_estatus"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:textColor="@color/primary_text_color"
                    android:gravity="center"
                    android:id="@+id/tv_estado"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_personas"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textColor="@color/primary_text_color"
                    android:textSize="20sp"
                    android:id="@+id/tv_personas"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/ll_info_extra"
                android:orientation="horizontal"
                android:id="@+id/ll_list_necesidades"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:id="@+id/rl_checklist_left"
                    android:gravity="center"
                    android:orientation="vertical">

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:id="@+id/rl_checklist_right"
                    android:gravity="center"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_button"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_list_necesidades"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/cancel_button_bg"
                android:paddingBottom="1dp"
                android:text="@string/texto_cancelar"
                android:contentDescription="@string/texto_boton_cancelar_solicitud"
                android:textColor="@color/header_text_color" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>