<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.eventos.EventoDetalle"


    >

    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/top_bar_background">


        <TextView
            android:id="@+id/tv_top_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/eventos"
            android:textColor="@color/header_text_color"
            android:textSize="30sp" />

        <View
            android:layout_width="140dp"
            android:layout_height="3dp"
            android:layout_alignBottom="@id/tv_top_bar_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-4dp"
            android:background="@color/secondary_color"

            />
    </RelativeLayout>

    <!-- Aca empieza el lugar donde debería de ir la foto -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/rl_top_bar"
        android:id="@+id/ll_foto_evento"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poster_del_evento"
            android:adjustViewBounds="true"
            android:src="@drawable/sanctorum"
            android:id="@+id/img_evento"
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_foto_evento"
        android:background="@drawable/button_ubicacion"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/sanctorum"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fecha_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="martes 4 de octubre, auditorio del museo de la ciudad."
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp" />
       <!--
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/boton_guardar_evento"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_ubicacion"
            android:text="guardar"
            android:textColor="@color/primary_text_color"
            android:textSize="24sp" /> -->


    </LinearLayout>
</RelativeLayout>